# GameOfLife

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  get-deps.ps1  get-deps.sh
config/: easylog.conf
lib/: CMakeLists.txt
script/: get-deps
script/travis/: install-deps
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  GameLoop.cpp  GameLoop.hpp
src/logic/: Cell.cpp  Cell.hpp  Coordinate.cpp  Coordinate.hpp  Grid.cpp  Grid.hpp  GridDrawer.cpp  GridDrawer.hpp  GridUpdater.cpp  GridUpdater.hpp  World.cpp  World.hpp
src/ui/: ControlPanel.cpp  ControlPanel.hpp  GameMenu.cpp  GameMenu.hpp  GameWindow.cpp  GameWindow.hpp  PaintState.cpp  PaintState.hpp  ScrollState.cpp  ScrollState.hpp  WaitingState.cpp  WaitingState.hpp  WindowProperties.hpp  WindowState.hpp
src/utils/: Random.cpp  Random.hpp
test/: CMakeLists.txt
